--- a/examples/lab3/bigip-configurations/runtime-init-conf-3nic-payg.yaml
+++ b/examples/lab3/bigip-configurations/runtime-init-conf-3nic-payg.yaml
@@ -12,12 +12,8 @@ runtime_parameters:
       environment: azure
       field: name
   - name: BIGIP_PASSWORD
-    type: url
-    query: vmId
-    value: 'http://169.254.169.254/metadata/instance/compute?api-version=2017-08-01'
-    headers:
-      - name: Metadata
-        value: true
+      type: static
+      value: sports-lionize-DOCTRINE1
   - name: SELF_IP_EXTERNAL
     type: metadata
     metadataProvider:
@@ -154,6 +150,9 @@ extension_services:
               members:
                 - serverAddresses:
                     - 10.0.3.4
+                  servicePort: 80
+                - serverAddresses:
+                    - 10.0.3.5
                   servicePort: 80
               monitors:
                 - http
