--- a/examples/lab3/bigip-configurations/runtime-init-conf-3nic-payg.yaml
+++ b/examples/lab3/bigip-configurations/runtime-init-conf-3nic-payg.yaml
@@ -13,7 +13,7 @@ runtime_parameters:
       field: name
   - name: BIGIP_PASSWORD
       type: string
-      value: 'sports-lionize-DOCTRINE1'
+      value: "sports-lionize-DOCTRINE1"
   - name: SELF_IP_EXTERNAL
     type: metadata
     metadataProvider:
