--- a/examples/modules/application/application.json
+++ b/examples/modules/application/application.json
@@ -96,7 +96,7 @@
     },
     "variables":{
         "cloudInit":"[concat('#include\n',parameters('cloudInitUrl'))]",
-        "commandToExecute":"[concat('sleep 60; apt-get update -y; apt-get -y install docker.io; docker run --name f5demo -p 80:80 -p 443:443 -d ', parameters('appContainerName'), '')]",
+        "commandToExecute":"[concat('sleep 60; apt-get update -y; apt-get -y install docker.io; docker run --name gruyere -p 80:8008 -p 443:443 -d ', parameters('appContainerName'), '')]",
         "imageReference":{
             "offer":"0001-com-ubuntu-server-focal",
             "publisher":"Canonical",
