--- a/examples/modules/application/application.parameters.json
+++ b/examples/modules/application/application.parameters.json
@@ -18,7 +18,7 @@
       "value": "vm01"
     },
     "instanceType": {
-      "value": "Standard_D2s_v3"
+      "value": "Standard_DS3_v2"
     },
     "nsgId": {
       "value": ""
