--- a/examples/exam/bigip-configurations/runtime-init-conf-3nic-payg-gruyere.yaml
+++ b/examples/exam/bigip-configurations/runtime-init-conf-3nic-payg-gruyere.yaml
@@ -82,7 +82,7 @@ extension_services:
             class: System
             autoPhonehome: false
             hostname: '{{{HOST_NAME}}}.local'
-          quickstart:
+          azureuser:
             class: User
             userType: regular
             partitionAccess:
