--- a/examples/exam/bigip-configurations/runtime-init-conf-3nic-payg-gruyere.yaml
+++ b/examples/exam/bigip-configurations/runtime-init-conf-3nic-payg-gruyere.yaml
@@ -61,8 +61,8 @@ extension_services:
             provision.extramb: 1000
             restjavad.useextramb: true
             ui.advisory.enabled: true
-            ui.advisory.color: blue
-            ui.advisory.text: BIG-IP LAB
+            ui.advisory.color: green
+            ui.advisory.text: BIG-IP EXAM
             config.allow.rfc3927: enable
             dhclient.mgmt: disable
           My_Dns:
@@ -152,7 +152,7 @@ extension_services:
                     - 10.0.3.4
                   servicePort: 80
               monitors:
-                - tcp
+                - https
           HTTP_Service:
             class: Application
             template: http
@@ -169,25 +169,5 @@ extension_services:
               url: >-
                 https://raw.githubusercontent.com/F5Networks/f5-azure-arm-templates-v2/v1.4.0.0/examples/quickstart/bigip-configurations/Rapid_Deployment_Policy_13_1.xml
               enforcementMode: blocking
-              ignoreChanges: false
-          HTTPS_Service:
-            class: Application
-            template: https
-            serviceMain:
-              class: Service_HTTPS
-              virtualAddresses:
-                - 10.0.1.101
-              snat: auto
-              policyWAF:
-                use: WAFPolicy
-              pool: /Tenant_1/Shared/shared_pool
-              serverTLS:
-                bigip: /Common/clientssl
-              redirect80: false
-            WAFPolicy:
-              class: WAF_Policy
-              url: >-
-                https://raw.githubusercontent.com/F5Networks/f5-azure-arm-templates-v2/v1.4.0.0/examples/quickstart/bigip-configurations/Rapid_Deployment_Policy_13_1.xml
-              enforcementMode: transparent
               ignoreChanges: false
 post_onboard_enabled: []
