--- a/examples/modules/application/application-ng.parameters.json
+++ b/examples/modules/application/application-ng.parameters.json
@@ -36,6 +36,9 @@
         "environment": "ENV",
         "group": "GROUP",
         "owner": "OWNER"
+      },
+      "AppIP": {
+        "value": "10.0.3.10"
       }
     }
   }
