--- a/examples/modules/application/application-ng.json
+++ b/examples/modules/application/application-ng.json
@@ -97,7 +97,7 @@
         "imageReference": {
             "offer": "0001-com-ubuntu-server-focal",
             "publisher": "Canonical",
-            "sku": "20_04-lts",
+            "sku": "20_04-lts-gen2",
             "version": "latest"
         },
         "nicName": "[concat(variables('vmName'), '-nic')]",
